tests/scope/bad/sub_vars_in_sub_var.catala_en
## Article

```catala
declaration scope A:
  context output x content boolean
  context output y content integer

declaration scope B:
  a scope A

scope B:
  definition a.x equals true
  definition a.y equals if a.x then 0 else 1
```

```catala-test-inline
$ catala test-scope A
┌─[ERROR]─
│
│  The subscope a is used in the definition of its own input a.y
│  (Catala doesn't support recursion).
│
├─➤ tests/scope/bad/sub_vars_in_sub_var.catala_en:13.28-13.29:
│    │
│ 13 │   definition a.y equals if a.x then 0 else 1
│    │                            ‾
└─ Article
#return code 123#
```
